# KPM_Cpp

./: .cproject  .cproject.orig  .gitignore  .project  CMakeLists.txt  callgrind.out.19430  readme.build  readme.lib.build
Default/: makefile  objects.mk  sources.mk
Default/ReleaseMPILib/: subdir.mk
Default/lammps-dev/src/: subdir.mk
Default/lammps-dev/tools/: subdir.mk
Default/src/: KPM.d  KPMParameters.d  main.d  subdir.mk
Default/utests/: subdir.mk
EminEmax/: makefile  objects.mk  sources.mk
EminEmax/src/: EminEmaxFinder.d  FileManager.d  KPM.d  eminemax.d  includes.mk  subdir.mk
EminEmax/utests/: subdir.mk
include/: EminEmaxFinder.h  FileManager.h  KPM.h  KPMParameters.h  core.h
lammps-dev/src/: dynamical_matrix.cpp  lmpinstalledpkgs.h  log.lammps  packages_atom.h  packages_compute.h  packages_fix.h  packages_pair.h  style_command.h  style_fix.h  style_pair.h
lammps-dev/src/MAKE/: Makefile.mpi  Makefile.serial
src/: EminEmaxFinder.cpp  FileManager.cpp  FileManager.d  KPM.cpp  KPM.d  KPMParameters.cpp  emin.cpp  emin.d  eminemax.cpp  main.cpp  main.d
test/: AF.csv  DOS_KPM_py_K200_R30.csv  H.mtx  a_data.file
test/pyres/: DOS_KPM_K1000_R160.csv
test_25_03_22/: readme
test_CG/: AF.csv  GA.csv  readme
test_atom/: AF.sh  Hessian.lmp  dynamical_matrix.cpp  dynamical_matrix.h  in.AF  in.GA  in.atom  readme
test_systems/CG1/: readme  test.config  test1.config
test_systems/atom_20k_300T/: gp2realUnits.sh
test_systems/atom_2k/: test.config
tests/: makefile  objects.mk  sources.mk
tests/src/: EminEmaxFinder.d  FileManager.d  subdir.mk
tests/utests/: gtest_main.d  test.d
utests/: gtest_main.cpp  test.cpp
(+163 files in other folders)
